--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "reveal": true,
   "type": "module",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "node index.js"
   },
   "engines": {
     "node": ">=8"
@@ -31,6 +31,8 @@
     "nodemon": "^2.0.22",
     "p-map": "^6.0.0",
     "p-retry": "^5.1.2",
+    "prompt-sync": "^4.2.0",
+    "prompt-sync-history": "^1.0.1",
     "puppeteer": "^20.4.0",
     "puppeteer-email": "^0.1.0",
     "puppeteer-extra": "^3.3.6",
